--- a/test/eqr2cub.ipynb
+++ b/test/eqr2cub.ipynb
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1351,17 +1351,17 @@
     "\n",
     "    # チャンネルの次元を先頭に移動\n",
     "    #cube = cube.permute(2, 0, 1).unsqueeze(0)\n",
-    "    cube = torch.tensor(cube, device=device).permute(2, 0, 1).float()\n",
+    "    cube = torch.tensor(cube, device=device).permute(2, 0, 1).float().cpu().numpy().astype(np.float32)\n",
     "\n",
     "    # grid_sampleを使用してリマップ\n",
-    "    output = torch.nn.functional.grid_sample(cube, grid, mode='bilinear', padding_mode='zeros', align_corners=True)\n",
+    "    output = cv2.remap(cube, tmpx.cpu().numpy().astype(np.float32), tmpy.cpu().numpy().astype(np.float32), interpolation=cv2.INTER_LINEAR)\n",
     "\n",
-    "    return output[0].permute(1, 2, 0).cpu().numpy()"
+    "    return output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -1369,26 +1369,32 @@
      "output_type": "stream",
      "text": [
       "2880 3840 3\n",
-      "(2884, 3844, 3) <class 'numpy.ndarray'>\n",
-      "torch.Size([3, 2884, 3844])\n"
-     ]
-    },
-    {
-     "ename": "OutOfMemoryError",
-     "evalue": "CUDA out of memory. Tried to allocate 475.27 GiB (GPU 0; 19.70 GiB total capacity; 1.00 GiB already allocated; 17.95 GiB free; 1.07 GiB reserved in total by PyTorch) If reserved memory is >> allocated memory try setting max_split_size_mb to avoid fragmentation.  See documentation for Memory Management and PYTORCH_CUDA_ALLOC_CONF",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOutOfMemoryError\u001b[0m                          Traceback (most recent call last)",
-      "\u001b[1;32m/home/imonalc/CP-360-Weakly-Supervised-Saliency/test/eqr2cub.ipynb Cell 28\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/imonalc/CP-360-Weakly-Supervised-Saliency/test/eqr2cub.ipynb#X50sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m immm \u001b[39m=\u001b[39m cube_to_equirectangular_torch(cube_img, \u001b[39m1920\u001b[39;49m\u001b[39m*\u001b[39;49m\u001b[39m2\u001b[39;49m, device)\n",
-      "\u001b[1;32m/home/imonalc/CP-360-Weakly-Supervised-Saliency/test/eqr2cub.ipynb Cell 28\u001b[0m line \u001b[0;36m6\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/imonalc/CP-360-Weakly-Supervised-Saliency/test/eqr2cub.ipynb#X50sZmlsZQ%3D%3D?line=64'>65</a>\u001b[0m \u001b[39mprint\u001b[39m(cube\u001b[39m.\u001b[39mshape)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/imonalc/CP-360-Weakly-Supervised-Saliency/test/eqr2cub.ipynb#X50sZmlsZQ%3D%3D?line=66'>67</a>\u001b[0m \u001b[39m# grid_sampleを使用してリマップ\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/imonalc/CP-360-Weakly-Supervised-Saliency/test/eqr2cub.ipynb#X50sZmlsZQ%3D%3D?line=67'>68</a>\u001b[0m output \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49mnn\u001b[39m.\u001b[39;49mfunctional\u001b[39m.\u001b[39;49mgrid_sample(cube, grid, mode\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mbilinear\u001b[39;49m\u001b[39m'\u001b[39;49m, padding_mode\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mzeros\u001b[39;49m\u001b[39m'\u001b[39;49m, align_corners\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/imonalc/CP-360-Weakly-Supervised-Saliency/test/eqr2cub.ipynb#X50sZmlsZQ%3D%3D?line=69'>70</a>\u001b[0m \u001b[39mreturn\u001b[39;00m output[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mpermute(\u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m0\u001b[39m)\u001b[39m.\u001b[39mcpu()\u001b[39m.\u001b[39mnumpy()\n",
-      "File \u001b[0;32m~/anaconda3/envs/cubep/lib/python3.8/site-packages/torch/nn/functional.py:4244\u001b[0m, in \u001b[0;36mgrid_sample\u001b[0;34m(input, grid, mode, padding_mode, align_corners)\u001b[0m\n\u001b[1;32m   4236\u001b[0m     warnings\u001b[39m.\u001b[39mwarn(\n\u001b[1;32m   4237\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mDefault grid_sample and affine_grid behavior has changed \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   4238\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mto align_corners=False since 1.3.0. Please specify \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   4239\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39malign_corners=True if the old behavior is desired. \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   4240\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mSee the documentation of grid_sample for details.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   4241\u001b[0m     )\n\u001b[1;32m   4242\u001b[0m     align_corners \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n\u001b[0;32m-> 4244\u001b[0m \u001b[39mreturn\u001b[39;00m torch\u001b[39m.\u001b[39;49mgrid_sampler(\u001b[39minput\u001b[39;49m, grid, mode_enum, padding_mode_enum, align_corners)\n",
-      "\u001b[0;31mOutOfMemoryError\u001b[0m: CUDA out of memory. Tried to allocate 475.27 GiB (GPU 0; 19.70 GiB total capacity; 1.00 GiB already allocated; 17.95 GiB free; 1.07 GiB reserved in total by PyTorch) If reserved memory is >> allocated memory try setting max_split_size_mb to avoid fragmentation.  See documentation for Memory Management and PYTORCH_CUDA_ALLOC_CONF"
+      "(2884, 3844, 3) <class 'numpy.ndarray'>\n"
      ]
     }
    ],
    "source": [
     "immm = cube_to_equirectangular_torch(cube_img, 1920*2, device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 201,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv2.imwrite(\"eq2.jpg\", immm)"
    ]
   },
   {
