--- a/test/cub2eqr.ipynb
+++ b/test/cub2eqr.ipynb
@@ -17,16 +17,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cube_img = cv2.imread(\"output/cube_map.png\")"
+    "cube_img = cv2.imread(\"output/cube_map.png\")\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +41,7 @@
     "    w += np.pi / img_w\n",
     "    \n",
     "    # np.meshgridをtorch.meshgridに置き換え\n",
-    "    theta, phi = torch.meshgrid(w, h)\n",
+    "    theta, phi = torch.meshgrid(w, h, indexing=\"ij\")\n",
     "    \n",
     "    # 3D座標の計算\n",
     "    x = torch.cos(phi) * torch.cos(theta)\n",
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +61,7 @@
     "    # Convert input numpy array to PyTorch tensor\n",
     "    img_tensor = torch.tensor(img).to(device).permute(0, 1, 2)\n",
     "    \n",
-    "    h, w, c = img_tensor.shape\n",
+    "    h, w, c = img.shape\n",
     "    cw = w // 4\n",
     "    print(h, w, c)\n",
     "    \n",
@@ -97,20 +98,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "numpy.ndarray"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def cube_to_equirectangular_torch(img, width, device):\n",
     "    # imgをテンソルに変換\n",
@@ -185,24 +175,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "immm = cube_to_equirectangular_torch(cube_img, 1920*2, device)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([6, 3, 1560, 1560])\n"
+      "tensor([[-0.0008, -0.0025, -0.0041,  ..., -0.0025, -0.0008,  0.0008],\n",
+      "        [-0.0008, -0.0025, -0.0041,  ..., -0.0025, -0.0008,  0.0008],\n",
+      "        [-0.0008, -0.0025, -0.0041,  ..., -0.0025, -0.0008,  0.0008],\n",
+      "        ...,\n",
+      "        [-0.0008, -0.0025, -0.0041,  ..., -0.0025, -0.0008,  0.0008],\n",
+      "        [-0.0008, -0.0025, -0.0041,  ..., -0.0025, -0.0008,  0.0008],\n",
+      "        [-0.0008, -0.0025, -0.0041,  ..., -0.0025, -0.0008,  0.0008]],\n",
+      "       device='cuda:0') tensor([[-6.6914e-07, -2.0082e-06, -3.3472e-06,  ..., -2.0088e-06,\n",
+      "         -6.6982e-07,  6.6921e-07],\n",
+      "        [-2.0081e-06, -6.0267e-06, -1.0045e-05,  ..., -6.0287e-06,\n",
+      "         -2.0102e-06,  2.0084e-06],\n",
+      "        [-3.3469e-06, -1.0045e-05, -1.6742e-05,  ..., -1.0048e-05,\n",
+      "         -3.3504e-06,  3.3473e-06],\n",
+      "        ...,\n",
+      "        [ 2.0085e-06,  6.0278e-06,  1.0047e-05,  ...,  6.0299e-06,\n",
+      "          2.0106e-06, -2.0087e-06],\n",
+      "        [ 6.6972e-07,  2.0099e-06,  3.3501e-06,  ...,  2.0106e-06,\n",
+      "          6.7041e-07, -6.6979e-07],\n",
+      "        [-6.6928e-07, -2.0086e-06, -3.3479e-06,  ..., -2.0093e-06,\n",
+      "         -6.6996e-07,  6.6935e-07]], device='cuda:0') tensor([[-1.0000, -1.0000, -1.0000,  ...,  1.0000,  1.0000,  1.0000],\n",
+      "        [-1.0000, -1.0000, -1.0000,  ...,  1.0000,  1.0000,  1.0000],\n",
+      "        [-1.0000, -1.0000, -1.0000,  ...,  1.0000,  1.0000,  1.0000],\n",
+      "        ...,\n",
+      "        [-1.0000, -1.0000, -1.0000,  ...,  1.0000,  1.0000,  1.0000],\n",
+      "        [-1.0000, -1.0000, -1.0000,  ...,  1.0000,  1.0000,  1.0000],\n",
+      "        [-1.0000, -1.0000, -1.0000,  ...,  1.0000,  1.0000,  1.0000]],\n",
+      "       device='cuda:0')\n",
+      "2880 3840 3\n",
+      "(2884, 3844, 3) <class 'numpy.ndarray'>\n"
      ]
+    }
+   ],
+   "source": [
+    "immm = cube_to_equirectangular_torch(cube_img, 1920*2, device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -215,6 +244,210 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##\n",
+    "# @brief 3次元座標群取得関数\n",
+    "# @details 360度画像の緯度経度が半径1の球の3次元座標のどこにマッピングされるか\n",
+    "# @param img_w 360度画像の幅\n",
+    "# @param img_h 360度画像の高さ\n",
+    "# @return x,y,zの座標群\n",
+    "def create_3dmap_from_size(img_w, img_h):\n",
+    " \n",
+    "    h = np.linspace(-np.pi/2, np.pi/2, img_h, endpoint=False)\n",
+    "    w = np.linspace(-np.pi, np.pi, img_w, endpoint=False)\n",
+    "     \n",
+    "    # 配列を対称形にするためのオフセット\n",
+    "    h = h + (np.pi/2) / img_h\n",
+    "    w = w + np.pi / img_w\n",
+    "     \n",
+    "    theta, phi = np.meshgrid(w, h)\n",
+    " \n",
+    "    x = np.cos(phi) * np.cos(theta)\n",
+    "    y = np.cos(phi) * np.sin(theta)\n",
+    "    z = np.sin(phi)\n",
+    " \n",
+    "    return x, y, z\n",
+    " \n",
+    " \n",
+    "##\n",
+    "# @brief cube画像にのりしろをつける\n",
+    "# @details 画素補間用にcube画像の境界部に2画素分反対側の画像を付与する\n",
+    "# @param img cube画像\n",
+    "# @return のりしろ付き画像\n",
+    "def add_norishiro_to_cube(img):\n",
+    "     \n",
+    "    h,w,c = img.shape\n",
+    "    cw = w // 4\n",
+    "     \n",
+    "    # 周囲2画素大きい画像を用意\n",
+    "    canvas = np.zeros((h+4, w+4, c), dtype=img.dtype)\n",
+    "    canvas[2:-2, 2:-2,:] = img\n",
+    "     \n",
+    "    # 上下左右にのりしろをつける\n",
+    "    # up    \n",
+    "    canvas[0:2,cw+2:2*cw+2,:] = np.rot90(img[cw:cw+2, 3*cw:,:], 2)\n",
+    "    # bottom\n",
+    "    canvas[-2:,cw+2:2*cw+2,:] = np.rot90(img[2*cw-2:2*cw,3*cw:,:], 2)\n",
+    "    # left\n",
+    "    canvas[cw+2:2*cw+2,0:2,:] = img[cw:2*cw,-2:,:]\n",
+    "    # right\n",
+    "    canvas[cw+2:2*cw+2,-2:,:] = img[cw:2*cw,0:2,:]\n",
+    " \n",
+    "    #　残りの折り返しの部分のコピー\n",
+    "    canvas[cw:cw+2,:cw+2,:] = np.rot90(canvas[:cw+2,cw+2:cw+4,:])\n",
+    "    canvas[:cw+2,cw:cw+2,:] = np.rot90(canvas[cw+2:cw+4,:cw+2,:],3)\n",
+    "    #\n",
+    "    canvas[2*cw+2:2*cw+4,:cw+2,:] = np.rot90(canvas[2*cw+2:,cw+2:cw+4,:],3)\n",
+    "    canvas[2*cw+2:,cw:cw+2,:] = np.rot90(canvas[2*cw:2*cw+2,:cw+2,:])\n",
+    "    #\n",
+    "    canvas[cw:cw+2,2*cw+2:3*cw+2,:] = np.rot90(canvas[2:cw+2,2*cw:2*cw+2,:],3)\n",
+    "    canvas[:cw+2,2*cw+2:2*cw+4:] = np.rot90(canvas[cw+2:cw+4,2*cw+2:3*cw+4,:])\n",
+    "    #\n",
+    "    canvas[2*cw+2:2*cw+4,2*cw+2:3*cw+2,:] = np.rot90(canvas[2*cw+2:-2,2*cw:2*cw+2,:])\n",
+    "    canvas[2*cw+2:,2*cw+2:2*cw+4,:] = np.rot90(canvas[2*cw:2*cw+2,2*cw+2:3*cw+4,:], 3)\n",
+    " \n",
+    "    #\n",
+    "    canvas[cw:cw+2, 3*cw+2:,:] = canvas[3:1:-1, 2*cw+1:cw-1:-1,:]\n",
+    "    canvas[2*cw+2:2*cw+4, 3*cw+2:,:] = canvas[-3:-5:-1, 2*cw+1:cw-1:-1,:]\n",
+    "     \n",
+    "    return canvas\n",
+    " \n",
+    " \n",
+    "##\n",
+    "# @brief キューブ画像から全天球画像を作る\n",
+    "# @details 6面を展開図から全天球画像へ変換する\n",
+    "# @param img 元となるキューブ（展開図）画像\n",
+    "# @param width 全天球画像の幅(2の倍数である必要がある)\n",
+    "# @return 変換された画像\n",
+    "def cube_to_equirectangular(img, width, interpolation=cv2.INTER_LINEAR):\n",
+    " \n",
+    "    img_w = width\n",
+    "    img_h = width // 2\n",
+    "    width = img.shape[1] // 4\n",
+    "     \n",
+    "    x, y, z = create_3dmap_from_size(img_w, img_h)\n",
+    "    w = 0.5\n",
+    "     \n",
+    "    # front\n",
+    "    xx = w*y / x + w\n",
+    "    yy = w*z / x + w    \n",
+    "    mask = np.where((xx > 0) & (xx < 1) & (yy > 0) & (yy < 1) & (x > 0), 1, 0)\n",
+    "    tmpx = np.where(mask, xx*width + width, 0)\n",
+    "    tmpy = np.where(mask, yy*width + width, 0)\n",
+    "     \n",
+    "    # back\n",
+    "    xx = w*y / x + w\n",
+    "    yy = -w*z / x + w    \n",
+    "    mask = np.where((xx > 0) & (xx < 1) & (yy > 0) & (yy < 1) & (x < 0), 1, 0)\n",
+    "    tmpx = np.where(mask, xx*width + width*3, tmpx)\n",
+    "    tmpy = np.where(mask, yy*width + width, tmpy)\n",
+    "     \n",
+    "    #right\n",
+    "    xx = -w*x / y + w\n",
+    "    yy = w*z / y + w    \n",
+    "    mask = np.where((xx > 0) & (xx < 1) & (yy > 0) & (yy < 1) & (y > 0), 1, 0)\n",
+    "    tmpx = np.where(mask, xx*width + width*2, tmpx)\n",
+    "    tmpy = np.where(mask, yy*width + width, tmpy)\n",
+    "     \n",
+    "    #left\n",
+    "    xx = -w*x / y + w\n",
+    "    yy = -w*z / y + w    \n",
+    "    mask = np.where((xx > 0) & (xx < 1) & (yy > 0) & (yy < 1) & (y < 0), 1, 0)\n",
+    "    tmpx = np.where(mask, xx*width, tmpx)\n",
+    "    tmpy = np.where(mask, yy*width + width, tmpy)\n",
+    "     \n",
+    "    #up\n",
+    "    xx = -w*y / z + w\n",
+    "    yy = -w*x / z + w    \n",
+    "    mask = np.where((xx > 0) & (xx < 1) & (yy > 0) & (yy < 1) & (z < 0), 1, 0)\n",
+    "    tmpx = np.where(mask, xx*width + width, tmpx)\n",
+    "    tmpy = np.where(mask, yy*width, tmpy)\n",
+    "     \n",
+    "    #bottom\n",
+    "    xx = w*y / z + w\n",
+    "    yy = -w*x / z + w    \n",
+    "    mask = np.where((xx > 0) & (xx < 1) & (yy > 0) & (yy < 1) & (z > 0), 1, 0)\n",
+    "    tmpx = np.where(mask, xx*width + width, tmpx)\n",
+    "    tmpy = np.where(mask, yy*width + width*2, tmpy)\n",
+    "         \n",
+    "    cube = add_norishiro_to_cube(img)\n",
+    "     \n",
+    "    # のりしろ2画素と座標を画素位置に戻すため0.5オフセット\n",
+    "    tmpx += (2.0 - 0.5)\n",
+    "    tmpy += (2.0 - 0.5)\n",
+    "     \n",
+    "    return cv2.remap(cube, tmpx.astype(np.float32), tmpy.astype(np.float32), interpolation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.00081812 -0.00081812 -0.00081812 ... -0.00081812 -0.00081812\n",
+      "  -0.00081812]\n",
+      " [-0.00245437 -0.00245436 -0.00245435 ... -0.00245435 -0.00245436\n",
+      "  -0.00245437]\n",
+      " [-0.0040906  -0.00409059 -0.00409057 ... -0.00409057 -0.00409059\n",
+      "  -0.0040906 ]\n",
+      " ...\n",
+      " [-0.0040906  -0.00409059 -0.00409057 ... -0.00409057 -0.00409059\n",
+      "  -0.0040906 ]\n",
+      " [-0.00245437 -0.00245436 -0.00245435 ... -0.00245435 -0.00245436\n",
+      "  -0.00245437]\n",
+      " [-0.00081812 -0.00081812 -0.00081812 ... -0.00081812 -0.00081812\n",
+      "  -0.00081812]] [[-6.69325236e-07 -2.00797392e-06 -3.34661722e-06 ...  3.34661722e-06\n",
+      "   2.00797392e-06  6.69325236e-07]\n",
+      " [-2.00797392e-06 -6.02391637e-06 -1.00398427e-05 ...  1.00398427e-05\n",
+      "   6.02391637e-06  2.00797392e-06]\n",
+      " [-3.34661722e-06 -1.00398427e-05 -1.67330413e-05 ...  1.67330413e-05\n",
+      "   1.00398427e-05  3.34661722e-06]\n",
+      " ...\n",
+      " [-3.34661722e-06 -1.00398427e-05 -1.67330413e-05 ...  1.67330413e-05\n",
+      "   1.00398427e-05  3.34661722e-06]\n",
+      " [-2.00797392e-06 -6.02391637e-06 -1.00398427e-05 ...  1.00398427e-05\n",
+      "   6.02391637e-06  2.00797392e-06]\n",
+      " [-6.69325236e-07 -2.00797392e-06 -3.34661722e-06 ...  3.34661722e-06\n",
+      "   2.00797392e-06  6.69325236e-07]] [[-0.99999967 -0.99999967 -0.99999967 ... -0.99999967 -0.99999967\n",
+      "  -0.99999967]\n",
+      " [-0.99999699 -0.99999699 -0.99999699 ... -0.99999699 -0.99999699\n",
+      "  -0.99999699]\n",
+      " [-0.99999163 -0.99999163 -0.99999163 ... -0.99999163 -0.99999163\n",
+      "  -0.99999163]\n",
+      " ...\n",
+      " [ 0.99999163  0.99999163  0.99999163 ...  0.99999163  0.99999163\n",
+      "   0.99999163]\n",
+      " [ 0.99999699  0.99999699  0.99999699 ...  0.99999699  0.99999699\n",
+      "   0.99999699]\n",
+      " [ 0.99999967  0.99999967  0.99999967 ...  0.99999967  0.99999967\n",
+      "   0.99999967]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out = cube_to_equirectangular(cube_img, 1920*2, interpolation=cv2.INTER_CUBIC)\n",
+    "cv2.imwrite(\"eq.jpg\",out)"
+   ]
   },
   {
    "cell_type": "code",
@@ -247,7 +480,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.7.16"
   },
   "orig_nbformat": 4
  },
