--- a/test/cub2eqr.ipynb
+++ b/test/cub2eqr.ipynb
@@ -125,35 +125,30 @@
     "    tmpx = torch.where(mask, xx*width + width, 0)\n",
     "    tmpy = torch.where(mask, yy*width + width, 0)\n",
     "     \n",
-    "    # back\n",
     "    xx = w*y / x + w\n",
     "    yy = -w*z / x + w    \n",
     "    mask = (xx > 0) & (xx < 1) & (yy > 0) & (yy < 1) & (x < 0)\n",
     "    tmpx = torch.where(mask, xx*width + width*3, tmpx)\n",
     "    tmpy = torch.where(mask, yy*width + width, tmpy)\n",
     "     \n",
-    "    #right\n",
     "    xx = -w*x / y + w\n",
     "    yy = w*z / y + w    \n",
     "    mask = (xx > 0) & (xx < 1) & (yy > 0) & (yy < 1) & (y > 0)\n",
     "    tmpx = torch.where(mask, xx*width + width*2, tmpx)\n",
     "    tmpy = torch.where(mask, yy*width + width, tmpy)\n",
     "     \n",
-    "    #left\n",
     "    xx = -w*x / y + w\n",
     "    yy = -w*z / y + w    \n",
     "    mask = (xx > 0) & (xx < 1) & (yy > 0) & (yy < 1) & (y < 0)\n",
     "    tmpx = torch.where(mask, xx*width, tmpx)\n",
     "    tmpy = torch.where(mask, yy*width + width, tmpy)\n",
     "     \n",
-    "    #up\n",
     "    xx = -w*y / z + w\n",
     "    yy = -w*x / z + w    \n",
     "    mask = (xx > 0) & (xx < 1) & (yy > 0) & (yy < 1) & (z < 0)\n",
     "    tmpx = torch.where(mask, xx*width + width, tmpx)\n",
     "    tmpy = torch.where(mask, yy*width, tmpy)\n",
-    "     \n",
-    "    #bottom\n",
+    "\n",
     "    xx = w*y / z + w\n",
     "    yy = -w*x / z + w    \n",
     "    mask = (xx > 0) & (xx < 1) & (yy > 0) & (yy < 1) & (z > 0)\n",
@@ -161,25 +156,18 @@
     "    tmpy = torch.where(mask, yy*width + width*2, tmpy)\n",
     "\n",
     "    cube = padding_cube(img, device).permute(1, 0, 2)\n",
-    "    #cv2.imwrite(\"cccc.jpg\",cube.cpu().numpy())\n",
     "    print(cube.shape, type(cube))\n",
     "\n",
     "    # grid_sampleを使うための座標の変換\n",
     "    grid = torch.stack((2*y/img_h - 1, 2*x/img_w - 1), dim=-1)\n",
-    "    grid = grid.unsqueeze(0)  # バッチ次元の追加\n",
+    "    grid = grid.unsqueeze(0)  \n",
     "\n",
-    "    # チャンネルの次元を先頭に移動\n",
-    "    #cube = cube.permute(2, 0, 1).unsqueeze(0)\n",
-    "    #cube = torch.tensor(cube, device=device).permute(2, 0, 1).float().cpu().numpy().astype(np.float32)\n",
-    "\n",
-    "    # grid_sampleを使用してリマップ\n",
-    "    #output = cv2.remap(cube, tmpx.cpu().numpy().astype(np.float32), tmpy.cpu().numpy().astype(np.float32), interpolation=cv2.INTER_LINEAR)\n",
-    "    cube_np = cube.cpu().numpy().astype(np.uint8)  # Convert tensor to numpy array\n",
-    "    output = cv2.remap(cube_np, tmpx.cpu().numpy().astype(np.float32), tmpy.cpu().numpy().astype(np.float32), interpolation=cv2.INTER_LINEAR)\n",
-    "    print(output.shape, type(output))\n",
+    "    cube_np = cube.cpu().numpy().astype(np.uint8)\n",
+    "    ret = cv2.remap(cube_np, tmpx.cpu().numpy().astype(np.float32), tmpy.cpu().numpy().astype(np.float32), interpolation=cv2.INTER_LINEAR)\n",
+    "    #print(output.shape, type(output))\n",
     "\n",
     "\n",
-    "    return output"
+    "    return ret"
    ]
   },
   {
@@ -278,13 +266,6 @@
     "print(cube_img.shape)\n",
     "immm = cube_to_equirectangular_torch(cube_img, 1920*2, device)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
