add 5PA results and new sim

--- a/EDA_makesim.ipynb
+++ b/EDA_makesim.ipynb
@@ -325,9 +325,9 @@
     "        pts1, desc1 = get_kd(sphorb.sphorb(path_o, points))\n",
     "        pts2, desc2 = get_kd(sphorb.sphorb(path_r, points))\n",
     "        os.chdir('../')\n",
-    "    if opt == \"sift\":\n",
-    "        desc1 = normalize_features(desc1)\n",
-    "        desc2 = normalize_features(desc2)\n",
+    "    #if opt == \"sift\":\n",
+    "    #    desc1 = normalize_features(desc1)\n",
+    "    #    desc2 = normalize_features(desc2)\n",
     "\n",
     "    #print(desc1.shape, desc1)\n",
     "    pts1, pts2, desc1, desc2 = sort_key(pts1, pts2, desc1, desc2, points)\n",
