--- a/check_frame.ipynb
+++ b/check_frame.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,14 +42,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
-    "frame_number = 100  # 表示したいフレーム番号\n",
-    "video_path = os.path.join(\"./data/Calibration\", \"pose1\" , \"O.MP4\")\n",
+    "pose = \"pose1\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "フレームが見つかりません。\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "(python:10535): GStreamer-CRITICAL **: 12:44:49.080: gst_element_make_from_uri: assertion 'gst_uri_is_valid (uri)' failed\n",
+      "[ WARN:0@5676.598] global /croot/opencv-suite_1676452025216/work/modules/videoio/src/cap_gstreamer.cpp (1127) open OpenCV | GStreamer warning: Error opening bin: no source element for URI \"./data/Farm/new/pose1/O.MP4\"\n",
+      "[ WARN:0@5676.598] global /croot/opencv-suite_1676452025216/work/modules/videoio/src/cap_gstreamer.cpp (862) isPipelinePlaying OpenCV | GStreamer warning: GStreamer: pipeline have not been created\n"
+     ]
+    }
+   ],
+   "source": [
+    "frame_number = 50  # 表示したいフレーム番号 271\n",
+    "video_path = os.path.join(\"./data/Farm/new\", pose, \"O.MP4\")\n",
     "show_frame_at(video_path, frame_number)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frame_number = 52  # 表示したいフレーム番号\n",
+    "video_path = os.path.join(\"./data/Farm/new\", pose , \"R.MP4\")\n",
+    "show_frame_at(video_path, frame_number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frame_number = 1000  # 表示したいフレーム番号\n",
+    "video_path = os.path.join(\"./data/Farm/new\", pose , \"O.MP4\")\n",
+    "show_frame_at(video_path, frame_number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frame_number = 4000  # 表示したいフレーム番号\n",
+    "video_path = os.path.join(\"./data/Farm/new\", pose, \"O.MP4\")\n",
+    "show_frame_at(video_path, frame_number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_frames(input_video_path, output_video_path, start_frame, end_frame, new_width=1024, new_height=512):\n",
+    "    # 動画ファイルを開く\n",
+    "    cap = cv2.VideoCapture(input_video_path)\n",
+    "    if not cap.isOpened():\n",
+    "        raise ValueError(\"動画ファイルを開けませんでした。\")\n",
+    "\n",
+    "    # フレームレートと出力の設定\n",
+    "    fps = cap.get(cv2.CAP_PROP_FPS)\n",
+    "    fourcc = cv2.VideoWriter_fourcc(*'mp4v')\n",
+    "    out = cv2.VideoWriter(output_video_path, fourcc, fps, (new_width, new_height))\n",
+    "\n",
+    "    # 切り出すフレームの範囲を確認\n",
+    "    current_frame = 0\n",
+    "    while True:\n",
+    "        ret, frame = cap.read()\n",
+    "        if not ret or current_frame > end_frame:\n",
+    "            break\n",
+    "        if start_frame <= current_frame <= end_frame:\n",
+    "            resized_frame = cv2.resize(frame, (new_width, new_height))\n",
+    "            out.write(resized_frame)\n",
+    "        current_frame += 1\n",
+    "\n",
+    "    # リソースを解放\n",
+    "    cap.release()\n",
+    "    out.release()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_video_path = os.path.join(\"./data/Farm/new\", pose, \"R.MP4\")\n",
+    "output_video_path = os.path.join(\"./data/Farm/new\", pose , \"R2.MP4\")\n",
+    "start_frame = 1000-6\n",
+    "end_frame = 4000-6\n",
+    "\n",
+    "extract_frames(input_video_path, output_video_path, start_frame, end_frame)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -75,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.7.16"
   }
  },
  "nbformat": 4,
