--- a/make_latex_table.ipynb
+++ b/make_latex_table.ipynb
@@ -63,6 +63,7 @@
     "ALL_LOCS = [\"Classroom\", \"Room\", \"Realistic\", \"Interior1\", \"Interior2\", \"Urban1\", \"Urban2\", \"Urban3\", \"Urban4\"]\n",
     "INDOORS = [\"Classroom\", \"Room\", \"Realistic\", \"Interior1\", \"Interior2\"]\n",
     "OUTDOORS = [\"Urban1\", \"Urban2\", \"Urban3\", \"Urban4\"]\n",
+    "POSES = [\"pose1\", \"pose2\", \"pose3\", \"pose4\", \"pose5\"]\n",
     "TIME_CATEGORYS = [\"FP\", \"MC\", \"PE\"]\n",
     "DESCRIPTORS_DICT = {\"Proposed1\": \"Proposed (1%)\",\n",
     "                    \"Proposed01\": \"Proposed (0.1%)\",\n",
@@ -447,7 +448,62 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def make_latex_table_MAEMSE_farm():\n",
+    "    for i, param in enumerate(PARAMS):\n",
+    "        for j, loc in enumerate([\"indoor\", \"outdoor\"]):\n",
+    "            if loc == \"indoor\":\n",
+    "                locs = INDOORS\n",
+    "            else:\n",
+    "                locs = OUTDOORS\n",
+    "            print(param, loc)\n",
+    "            maemse_data = {'Points limit': [500, 1000, 10000, 500, 1000, 10000]}\n",
+    "            maemse_compare_df = pd.DataFrame(maemse_data)\n",
+    "            maemse_ablation_df = pd.DataFrame(maemse_data)\n",
+    "            for tgt in [\"compare\", \"ablation\"]:\n",
+    "                if tgt == \"compare\":\n",
+    "                    descriptors = COMPARE_DESCRIPTORS\n",
+    "                    maemse_df = maemse_compare_df\n",
+    "                else:\n",
+    "                    descriptors = ABLATION_DESCRIPTORS\n",
+    "                    maemse_df = maemse_ablation_df\n",
+    "                for descriptor in descriptors:\n",
+    "                    for method in METHODS:\n",
+    "                        if descriptor in NOT_T_DESCRIPTORS and method == \"t\":\n",
+    "                            continue\n",
+    "                        method_tmp = f\"{METHODS_DICT[method]}{DESCRIPTORS_DICT[descriptor]}\"\n",
+    "                        maemse_df[method_tmp] = [0, 0, 0, 0, 0, 0]\n",
+    "        \n",
+    "            for idx_points, num_points in enumerate([500, 1000, 10000]):\n",
+    "                base_path = f\"results/FP_{num_points}/values\"\n",
+    "                value_dict = {}\n",
+    "                for tgt in [\"compare\", \"ablation\"]:\n",
+    "                    if tgt == \"compare\":\n",
+    "                        descriptors = COMPARE_DESCRIPTORS\n",
+    "                        maemse_df = maemse_compare_df\n",
+    "                    else:\n",
+    "                        descriptors = ABLATION_DESCRIPTORS\n",
+    "                        maemse_df = maemse_ablation_df\n",
+    "                    for descriptor in descriptors:\n",
+    "                        for method in METHODS:\n",
+    "                            if descriptor in NOT_T_DESCRIPTORS and method == \"t\":\n",
+    "                                continue\n",
+    "                            all_error_data = []\n",
+    "                            for scene in locs:\n",
+    "                                file_path = f\"{base_path}/{scene}_{method}{descriptor}_5PA_GSM_wRT/{param}_ERRORS.csv\"\n",
+    "                                error_data = read_csv_data(file_path)\n",
+    "                                all_error_data.extend(error_data)\n",
+    "                            method_tmp = f\"{METHODS_DICT[method]}{DESCRIPTORS_DICT[descriptor]}\"\n",
+    "                            maemse_df.loc[idx_points, method_tmp] = np.mean(all_error_data)\n",
+    "                            maemse_df.loc[idx_points+3, method_tmp] = np.mean(np.array(all_error_data) ** 2)\n",
+    "        \n",
+    "            maemse_latex_table = maemse_compare_df.to_latex(index=False,  float_format=\"{:.3f}\".format)\n",
+    "            print(maemse_latex_table)\n",
+    "            maemse_latex_table = maemse_ablation_df.to_latex(index=False, float_format=\"{:.3f}\".format)\n",
+    "            print(maemse_latex_table)\n",
+    "\n",
+    "make_latex_table_MAEMSE_farm()"
+   ]
   }
  ],
  "metadata": {
